small fix in text-align justify

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -122,6 +122,7 @@ ul li p {
     position: absolute;
     left: 0;
     bottom: 0;
+    text-align: justify;
 
     @include desktop {
         //bottom: 0;
